--- a/CustomDialogs/src/main/res/layout/colordialog_color_palette.xml
+++ b/CustomDialogs/src/main/res/layout/colordialog_color_palette.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:padding="8dp">
 
         <ImageView
