--- a/CustomDialogs/src/main/res/layout/datepickerdialog_main.xml
+++ b/CustomDialogs/src/main/res/layout/datepickerdialog_main.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@drawable/round_rectangle">
+
+
+        <com.coderz.f1.customdialogs.datetimedialogs.custom_views.NumberPicker
+            android:id="@+id/month1"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:showDividers="none"
+            android:layout_marginStart="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/day1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+             />
+
+        <com.coderz.f1.customdialogs.datetimedialogs.custom_views.NumberPicker
+            android:id="@+id/day1"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:showDividers="none"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/year1"
+            app:layout_constraintStart_toEndOf="@id/month1"
+            app:layout_constraintTop_toTopOf="parent"
+             />
+
+        <com.coderz.f1.customdialogs.datetimedialogs.custom_views.NumberPicker
+            android:id="@+id/year1"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:showDividers="none"
+            android:layout_marginEnd="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/day1"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
